# Data-Science_and_Machine-Learning

./: Hw1.ipynb  Hw1.py  Matrices.py  pyproject.toml  vectors.py
