[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["He-llo-Wo-rld <serhiiforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
seaborn = "^0.13.2"
notebook = "^7.4.5"
numpy = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
